# layerwise-llm-training

./: .env  .gitignore  AGENTS.md  CLAUDE.md  efficient-llm-training-plan.md  efficient_train_run.sh  layered_train_run.sh  profiling_results.json  pyproject.toml  test_linformer.py  test_materialize.py  train_config.toml  verify_checkpointing.py
analysis/: prelim_plots.py
nanochat/: approximated_gpt.py  checkpoint_manager.py  common.py  dataset.py  gpt.py  gradient_monitor.py  layered_gpt.py  loss_eval.py  muon.py  settings.py  tokenizer.py  utils.py  weight_monitor.py
scripts/: base_efficient_train.py  base_eval.py  base_layered_train.py  base_loss.py  base_train.py  tok_train.py
tests/: test_batching.py  test_fused_approx_linear.py  test_initialization.py  test_materialization_simple.py  test_profile_approx_linear.py  test_rustbpe.py  verify_approx_linear_logic.py
