[project]
name = "efficient-llm-training"
version = "0.1.0"
description = "Efficient LLM training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "fastapi>=0.117.1",
    "files-to-prompt>=0.6",
    "ninja>=1.13.0",
    "psutil>=7.1.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.12.0",
    "regex>=2025.9.1",
    "setuptools>=80.9.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
    "tyro>=1.0.0",
    "uvicorn>=0.36.0",
    "wandb>=0.21.3",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "rustbpe"
bindings = "pyo3"
python-source = "."
manifest-path = "rustbpe/Cargo.toml"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=8.37.0",
    "matplotlib>=3.10.8",
    "maturin>=1.9.4",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# target torch to cuda 12.8 or CPU
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
cpu = ["torch>=2.8.0"]
gpu = ["torch>=2.8.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]
